# porch

./: .gitignore  CMakeLists.txt  CMakePresets.json  LICENSE  README.md
resources/: window.fragment  window.vertex
src/: aabb.cc  aabb.hh  bvh.cc  bvh.hh  camera.cc  camera.hh  color.cc  color.hh  config.def  hittable.hh  hittable_list.cc  hittable_list.hh  main.cc  material.cc  material.hh  math.hh  quad.cc  quad.hh  ray.cc  ray.hh  renderer.cc  renderer.hh  sphere.cc  sphere.hh  texture.cc  texture.hh  types.hh  types.hpp  utils.cc  utils.hh  utils.hpp  vec3.cc  vec3.hh  window.cc  window.hh  window.hpp
